[package]

name = "linked-list"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "An alternative implementation of std::collections::LinkedList"

authors = [
    "Alexis Beingessner <a.beingessner@gmail.com>",
    "Peter Blackson <pioczarn@gmail.com>",
]

edition = "2021"
rust-version = "1.67"

repository = "https://github.com/contain-rs/linked-list"
homepage = "https://github.com/contain-rs/linked-list"
documentation = "https://docs.rs/linked-list/latest/linked_list"
keywords = ["data-structures"]
readme = "README.md"

[dependencies]
allocator-api2 = "0.2.20"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
borsh = { version = "1.5", default-features = false, features = ["derive", "std"], optional = true }
miniserde = { version = "0.1", optional = true }
nanoserde = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = []

serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
borsh = ["dep:borsh", "std"]

[package.metadata.docs.rs]
features = ["serde", "miniserde", "nanoserde", "borsh"]
